# HuGraph

./: -la  CMakeLists.txt  Readme.md  main.cpp
algorithm/: merge.h
index/: CURRENT  LOG  LOG.old  MANIFEST-010100
queryMethod/: query.cpp  query.h
translate/: translate.cpp  translate.h
